Fixed spacing between links

--- a/main.css
+++ b/main.css
@@ -196,6 +196,10 @@ footer {
     text-decoration: none;
 }
 
+li {
+    padding-bottom: 10px;
+}
+
 ul {
     list-style: none;
 }
